Optimize Project Page for Video Content
Enhanced the Project page to better support projects with video content, by making adjustments to CSS for improved layout and visual appeal on larger screens. Updated the HTML and JavaScript to refine the theme color for a darker look and ensure a more cohesive user experience. Replaced the SchoolProject component with a more generic Project component to reflect a broader range of projects, not limited to school-related content. Introduced functionality to recognize and embed YouTube videos directly within project pages, providing a seamless viewing experience. Additionally, made minor refinements like cleaning unused code and improving file naming for clarity.

- Improved video content layout and styling for a more immersive viewing experience.
- Updated theme color to enhance visual compatibility with a wider variety of content.
- Replaced specific SchoolProject references to a more inclusive Project naming, making the component suitable for various project types.
- Added support for direct YouTube video embedding within projects, streamlining content presentation.
- Cleaned codebase for better readability and maintenance.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
   <link rel="icon" href="%PUBLIC_URL%/johnlin-logo-128-nb.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0," />
   <link rel="stylesheet" href="%PUBLIC_URL%/theme.css">
-
   <script>
     (function () {
       var savedTheme = localStorage.getItem('theme')
@@ -21,7 +20,7 @@
     })();
   </script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="theme-color" content="#131313" />
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
