Enhance UI/UX and improve mobile responsiveness
This commit introduces several modifications aimed at enhancing the user interface and experience across the application while boosting mobile responsiveness. Major highlights include:

1. Reorganized HTML meta tags and links to optimize loading and display settings, incorporating a default theme color and description for improved SEO and branding.
2. Adjusted the project list layout and responsive design elements in CSS files, making the interface more fluid and adaptable to various screen sizes.
3. Enhanced navigation interaction by implementing a click-outside listener to close settings menus, improving usability and focus management.
4. Refactored the Header component to support the dynamic handling of settings visibility, contributing to a more intuitive user interaction.
5. Enriched content with the addition of a "Who am I?" section on the homepage, providing visitors with a deeper insight into the personal brand and professional orientation.
6. Optimized overall site aesthetic through subtle styling adjustments—such as increased letter-spacing for readability, refined border radii for a modern feel, and updated CSS variables for consistent theming.
7. Improved project deletion UX with redesigned delete buttons, making the interface cleaner and more intuitive.
8. Redefined mixins for repeated styles, enhancing code maintainability and consistency across the application.

These changes collectively aim to offer a polished, responsive, and engaging user experience, emphasizing clarity, accessibility, and a cohesive visual identity.

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/johnlin-logo-128-nb.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0," />
   <link rel="stylesheet" href="%PUBLIC_URL%/theme.css">
   <script>
     (function () {
@@ -19,9 +17,6 @@
       }
     })();
   </script>
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta name="theme-color" content="#131313" />
-
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +26,11 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=description" />
 
+  <link rel="icon" href="%PUBLIC_URL%/johnlin-logo-128-nb.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0," />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="description" content="John Lin's personal website" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- Apple Device -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-touch-fullscreen" content="yes" />
