--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="%PUBLIC_URL%/theme.css">
+
+  <!-- Theme -->
   <script>
     (function () {
       var savedTheme = localStorage.getItem('theme')
@@ -17,6 +19,7 @@
       }
     })();
   </script>
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,11 +29,22 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=description" />
 
+  <!---->
   <link rel="icon" href="%PUBLIC_URL%/johnlin-logo-128-nb.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0," />
   <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="John Lin's personal website" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="description" content="Web designer and developer." />
+  <meta name="keywords" content="John Lin, web design, front-end development, React, portfolio" />
+  <meta name="author" content="John Lin" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="John Lin's personal website" />
+  <meta property="og:description" content="Web designer and developer." />
+  <meta property="og:image" content="https://johnlin.me/assets/images/johnlin.jpeg" />
+  <meta property="og:url" content="https://johnlin.me" />
+  <meta property="og:type" content="website" />
+
   <!-- Apple Device -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-touch-fullscreen" content="yes" />
