Major Overhaul with New Features and Refinements
Feature Enhancement/Addition:
- Introduced a dark and auto theme mode in addition to the existing light mode, enhancing visual comfort for different environments.
- Implemented a new metadata component to manage SEO more effectively across different parts of the application.
- Enhanced the Laboratory section with a new categorized project listing, improving navigation and user experience.
- Added comprehensive handling for creating, updating, and deleting portfolios and blogs, expanding the admin functionalities.

Bug Fix:
- Corrected the authorization and login logic by refining the Redux state management ensuring robust user authentication.

Performance Optimization:
- Optimized Firestore queries in the scheduling feature by adding orderBy clauses to sort data effectively, leading to quicker retrieval times.

UI Adjustments:
- Overhauled the entire color scheme for UI elements across light and dark themes to maintain consistency and visual appeal.
- Refined the user interface in the Portfolio and Laboratory sections with new layout arrangements, icons, and interactive components.

Refactoring:
- Major refactoring in the Project and Laboratory sections, splitting components into smaller, more manageable parts.
- Replaced various CSS modules with SCSS across components, streamlining style management and enhancing customization capabilities.

Dependencies Update:
- Upgraded Firebase library to leverage newer cloud functions and improve database interactions.
- Removed unused dependencies related to URL handling and date management, simplifying the project structure.

Documentation:
- Updated README and inline documentation to reflect changes in project structure and new functionalities.

Other Relevant Categories:
- Enhanced error handling and user feedback mechanisms including new error message displays.

Commit Summary:
This commit introduces significant enhancements with new features like dark mode, improved SEO han

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,38 @@
     })();
   </script>
 
+  <!-- og meta-->
+
+  <title>John Lin</title>
+  <meta name="description" content="Web designer and developer." />
+  <meta property="og:title" content="John Lin" />
+  <meta property="og:description" content="Web designer and developer." />
+  <meta property="og:image" content="https://johnlin.me/assets/images/johnlin.jpeg" />
+  <meta property="og:url" content="https://johnlin.me" />
+  <meta property="og:site_name" content="John Lin" />
+  <meta property="og:locale" content="zh_TW" />
+
+  <meta name="twitter:title" content="John Lin" />
+  <meta name="twitter:description" content="Web designer and developer." />
+  <meta property="twitter:url" content="https://johnlin.me" />
+  <meta name="twitter:image" content="https://johnlin.me/assets/images/johnlin.jpeg" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- <title>__TITLE__</title>
+  <meta name="description" content="__DESCRIPTION__" />
+  <meta property="og:title" content="__TITLE__" />
+  <meta property="og:description" content="__DESCRIPTION__" />
+  <meta property="og:image" content="__THUMB__" />
+  <meta property="og:url" content="__URL__" />
+  <meta property="og:site_name" content="__SITE_NAME__" />
+  <meta property="og:locale" content="__LOCALE__" />
+
+  <meta name="twitter:title" content="__TITLE__" />
+  <meta name="twitter:description" content="__DESCRIPTION__" />
+  <meta property="twitter:url" content="__URL__" />
+  <meta name="twitter:image" content="__THUMB__" />
+  <meta name="twitter:card" content="summary_large_image" /> -->
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,14 +64,14 @@
   <!---->
   <link rel="icon" href="%PUBLIC_URL%/johnlin-logo-128-nb.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0," />
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="theme-color" content="#131313" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="description" content="Web designer and developer." />
   <meta name="keywords" content="John Lin, web design, front-end development, React, portfolio" />
   <meta name="author" content="John Lin" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="John Lin's personal website" />
+  <meta property="og:title" content="John Lin" />
   <meta property="og:description" content="Web designer and developer." />
   <meta property="og:image" content="https://johnlin.me/assets/images/johnlin.jpeg" />
   <meta property="og:url" content="https://johnlin.me" />
